--- a/build.gradle
+++ b/build.gradle
@@ -81,7 +81,7 @@ dependencies {
 	testImplementation 'org.springframework.graphql:spring-graphql-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testImplementation 'com.h2database:h2'
-
+	testRuntimeOnly 'com.h2database:h2'
 	// Lombok for tests
 	testCompileOnly 'org.projectlombok:lombok'
 	testAnnotationProcessor 'org.projectlombok:lombok'
